# YouTrackClient

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: user_story.md
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: add_comment.py  add_spent_time.py  create_issue.py  issues_resolved_between_dates.py  list_issues.py  run_command.py
src/youtrack/: __init__.py  cli.py  client.py
tests/: test_client.py
