[project]
name = "youtrack"
version = "0.1.0"
description = ""
authors = [
    { name = "Tom Mertens", email = "tommertensjobappliation@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "requests (>=2.32.4,<3.0.0)",
    "typer[all] (>=0.16.0,<0.17.0)",
]

[tool.poetry]
packages = [{ include = "youtrack", from = "src" }]

[tool.poetry.scripts]
youtrack = "youtrack.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
